# graphql-wasm

./: .gitignore  Cargo.toml  README.md  package-lock.json  wrangler.toml
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md  dependabot.yaml
src/: lib.rs
