[package]
name = "todo-graphql-worker"
version = "0.1.0"
edition = "2021"
description = "Cloudflare Workers 上の Axum + async-graphql ToDo API（WASM）"

[lib]
crate-type = ["cdylib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies]
worker = { version = "0.7.5", features = ["http"] }
axum = { version = "0.8", default-features = false, features = ["json", "macros"] }
tower-service = "0.3"
http = "1"
async-graphql = { version = "6.0.11", default-features = false }
async-graphql-parser = { version = "6.0.11", default-features = false }
async-graphql-value = { version = "6.0.11", default-features = false }
futures-util = { version = "0.3", default-features = false, features = ["alloc", "async-await", "sink", "io"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
